# c-coroutines-simple-implementation

./: CMakeLists.txt  README.md  test.c
coro_lib/: CMakeLists.txt  coro.c  coro.h
coro_test/: CMakeLists.txt  test.c
merge_arrays/: CMakeLists.txt
merge_sort/: merge-sort.c
